# mempalace

./: .dockerignore  .gitignore  Dockerfile  HARDENING_CHANGELOG.md  PUSH_CHECKLIST.md  TECHNICAL_CHANGELOG.md  docker-compose-atrium-dev.yml  docker-compose.coolify.yml  pyproject.toml  smoke_test.ps1  smoke_test.sh
.codex-plugin/hooks/: mempal-hook.sh
docs/architecture/: 01-storage-audit-v0.1.0.md  03-cf-access-setup-v0.1.0.md
docs/deployment/: MemPalace_Continuous_Capture_Architecture_v1.0.md  MemPalace_Cowork_Kickoff_v1.0.md  MemPalace_Deployment_Session_Log_v1.0.md  MemPalace_Deployment_Session_Log_v1.1.md  MemPalace_Deployment_Session_Log_v1.10.md  MemPalace_Deployment_Session_Log_v1.11.md  MemPalace_Deployment_Session_Log_v1.12.md  MemPalace_Deployment_Session_Log_v1.13.md  MemPalace_Deployment_Session_Log_v1.14.md  MemPalace_Deployment_Session_Log_v1.15.md  MemPalace_Deployment_Session_Log_v1.16.md  MemPalace_Deployment_Session_Log_v1.2.md  MemPalace_Deployment_Session_Log_v1.3.md  MemPalace_Deployment_Session_Log_v1.4.md  MemPalace_Deployment_Session_Log_v1.5.md  MemPalace_Deployment_Session_Log_v1.6.md  MemPalace_Deployment_Session_Log_v1.7.md  MemPalace_Deployment_Session_Log_v1.8.md  MemPalace_Deployment_Session_Log_v1.9.md  MemPalace_Phase_0_Discovery_v0.1.md  MemPalace_Phase_1_Launch_Checklist_v0.1.md  MemPalace_Phase_2_Architecture_v0.1.md  MemPalace_Phase_2_Architecture_v0.2.md  MemPalace_Phase_2b_Local_Container_Runbook_v0.1.md  MemPalace_Phase_2c_Coolify_Deploy_Runbook_v0.1.md  MemPalace_Voice_MCP_Findings_Reference_v1.0.md
docs/ui/: 01-mempalace-ui-discovery-v0.1.0.md  02-mempalace-ui-prd-v0.1.0.md  03-mempalace-ui-mockups-v0.1.0.md  HANDOFF-atrium-v0.1.2-2026-04-28.md
hooks/: mempal_precompact_hook.sh
mempalace/: __main__.py  cli.py  config.py  entity_registry.py  general_extractor.py  hooks_cli.py  http_server.py  kg_backfill.py  kg_extract_log.py  kg_extractor.py  knowledge_graph.py  mcp_server.py  normalize.py  oauth.py  query_sanitizer.py  room_detector_local.py  version.py
mempalace/atrium/: __init__.py  auth.py  ledger_client.py  routes.py
mempalace/atrium/static/: app.css
mempalace/atrium/templates/: _suggestion_row.html  agents_activity.html  base.html  drawer.html  home.html  (+8 more)
mempalace/continuous_capture/: __init__.py  activity.py  beacon.py  db.py  diary_writer.py  heartbeat.py  routes.py  sweeper.py
scripts/: backfill_drawer_extraction_state.py  verify_drawer_bookkeeping_fix.py
tests/: test_continuous_capture_beacon.py  test_continuous_capture_heartbeat.py  test_continuous_capture_idle.py  test_hooks_cli.py  test_http_server.py  test_kg_extract_log.py  test_kg_extractor.py  test_knowledge_graph.py  test_mcp_server.py  test_oauth.py  test_security_hardening.py
tools/: claude-mempalace-hook.ps1  remote_mine.py
